[tool.poetry]
name = "extract-org-emails"
version = "0.1.0"
description = "Extract emails from org files I use."
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
orgparse = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
extract-org-emails = "extract_org_emails:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
