[tool.poetry]
name = "manage-org-classes"
version = "0.1.0"
description = "Perform management tasks for classes I teach"
authors = ["John Maximilian <2e0byo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
orgparse = "^0.3.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
manage-org-classes = "manage_org_classes:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
